--- a/style.css
+++ b/style.css
@@ -1,17 +1,62 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-*{/*Universal selector: this applies to everything*/
+* {
+  /*Universal selector: this applies to everything*/
 
   box-sizing: border-box;
-}
-body{
-  font-family: 'Roboto', sans-serif;
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  overflow: hidden;
+  padding: 0;
+}
+body {
+  font-family: "Roboto", sans-serif;
+  padding-bottom: 1.2rem;
+}
 
+.container {
+  max-width: 72rem;
+  margin: 0 auto;
+}
+.hero {
+  background-image: url("https://images.unsplash.com/photo-1587831990711-23ca6441447b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8ZGVza3RvcCUyMGNvbXB1dGVyfGVufDB8fDB8fA%3D%3D&w=1000&q=80");
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+  color: whitesmoke;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 1.5rem;
+  position: relative;
+  z-index: -2;
+}
+.hero:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
+.hero h1 {
+  font-size: 3.2rem;
+  margin: -1.5rem 0 1.5rem;
+}
+.hero p {
+  font-size: 1.5rem;
+  letter-spacing: 0.18rem;
+}
+.content h3 {
+  font-size: 1.7rem;
+  margin: 1.8rem 0;
+}
+.content p {
+  font-size: 1rem;
+  line-height: 1.7rem;
+  letter-spacing: 0.05rem;
+  text-align: justify;
 }
