navbar css and transition done

--- a/style.css
+++ b/style.css
@@ -12,6 +12,49 @@ body {
   padding-bottom: 1.2rem;
 }
 
+.nav {
+  position: fixed;
+  background-color: rgb(29, 28, 28);
+  top: 0;
+  left: 0;
+  right: 0;
+  transition: all 0.4s ease-in-out;
+}
+.nav .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 0;
+  transition: all 0.4s ease-in-out;
+}
+.nav ul {
+  display: flex;
+  list-style-type: none;
+  transition: all 0.4s ease-in-out;
+}
+.nav a {
+  color: whitesmoke;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  transition: all 0.4s ease-in-out;
+}
+
+.nav.active {
+  background-color: whitesmoke;
+
+  box-shadow: 0 2px 10px grey;
+}
+.nav.active a {
+  color: black;
+}
+.nav.active .container {
+  padding: 0.5rem;
+}
+.nav a.current,
+.nav a:hover {
+  color: red;
+  /* font-weight: bold; */
+}
 .container {
   max-width: 72rem;
   margin: 0 auto;
@@ -21,7 +64,7 @@ body {
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: bottom center;
+  /* background-position: bottom center; */
   color: whitesmoke;
 
   display: flex;
